--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URI = mongodb+srv://adarsh:99008811@adarsh.p3ybyse.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET = ihavethehighground
