setup login flow

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGODB_URI = mongodb+srv://adarsh:99008811@adarsh.p3ybyse.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET = ihavethehighground
+REFRESH_TOKEN_SECRET = ihatesand
